# SummaryWork

./: README.md  Readme.md
Summary/: CMakeLists.txt  Makefile
Summary/CPP/: example.cpp  main.cpp  myApp
Summary/Headers/Project/: example.h
Summary/headers/: example.h
Summary/libs/pdftron/C/Common/: TRN_ByteRange.h  TRN_ErrorCodes.h  TRN_Exception.h  TRN_Iterator.h  TRN_Matrix2D.h  TRN_OwnedBitmap.h  TRN_RecentlyUsedCache.h  TRN_Types.h  TRN_UString.h  TRN_Vector.h
Summary/libs/pdftron/C/FDF/: TRN_FDFDoc.h  TRN_FDFField.h
Summary/libs/pdftron/C/Filters/: TRN_Filter.h  TRN_FilterReader.h  TRN_FilterWriter.h
Summary/libs/pdftron/C/PDF/: TRN_Action.h  TRN_ActionParameter.h  TRN_Annot.h  TRN_AppearanceReferenceList.h  TRN_BlackBoxContext.h  TRN_Bookmark.h  TRN_CADModule.h  TRN_CertificateStatus.h  TRN_ColorSpace.h  TRN_ContentReplacer.h  TRN_Convert.h  TRN_CubicCurveBuilder.h  TRN_Date.h  TRN_Destination.h  TRN_DigestAlgorithm.h  TRN_DigitalSignatureField.h  TRN_DisallowedChange.h  TRN_DocumentConversion.h  TRN_DocumentPreviewCache.h  TRN_Element.h  TRN_ElementBuilder.h  TRN_ElementReader.h  TRN_ElementWriter.h  TRN_EmbeddedTimestampVerificationResult.h  TRN_ExternalAnnotManager.h  TRN_Field.h  TRN_FileSpec.h  TRN_Flattener.h  TRN_Font.h  TRN_Function.h  TRN_GState.h  TRN_GeometryCollection.h  TRN_HTML2PDF.h  TRN_Highlights.h  TRN_Image.h  TRN_OCRModule.h  TRN_ObjectIdentifier.h  TRN_Optimizer.h  TRN_PDFDoc.h  TRN_PDFDocGenerator.h  (+33 more)
Summary/libs/pdftron/C/SDF/: TRN_DocSnapshot.h  TRN_NameTree.h  TRN_NumberTree.h  TRN_Obj.h  TRN_ObjSet.h  TRN_ResultSnapshot.h  TRN_SDFDoc.h  TRN_SecurityHandler.h  TRN_SignatureHandler.h  TRN_UndoManager.h
Summary/libs/pdftron/Common/: BasicTypes.h  ByteRange.h  Common.h  Exception.h  Iterator.h  Matrix2D.h  RecentlyUsedCache.h  UString.h
Summary/libs/pdftron/FDF/: FDFDoc.h  FDFField.h
Summary/libs/pdftron/Filters/: ASCII85Encode.h  Filter.h  FilterReader.h  FilterWriter.h  FlateEncode.h  MappedFile.h  MemoryFilter.h
Summary/libs/pdftron/Impl/: ActionParameter.inl  Convert.inl  KeyStrokeActionResult.inl  KeyStrokeEventData.inl  Markup.inl  PDFACompliance.inl  PDFDoc.inl  Page.inl  RadioButtonGroup.inl  SDFDoc.inl  Screen.inl  SignatureHandler.inl  SignatureWidget.inl  TrustVerificationResult.inl  ViewerOptimizedOptions.inl  Widget.inl
Summary/libs/pdftron/PDF/: Action.h  ActionParameter.h  Annot.h  Annots.h  Bookmark.h  CADConvertOptions.h  CADModule.h  CharData.h  ColorSpace.h  ContentReplacer.h  ConversionOptions.h  Convert.h  CubicCurveBuilder.h  Date.h  Destination.h  DiffOptions.h  DigestAlgorithm.h  DigitalSignatureField.h  DisallowedChange.h  DocumentConversion.h  DocumentPreviewCache.h  Element.h  ElementBuilder.h  ElementReader.h  ElementWriter.h  EmbeddedTimestampVerificationResult.h  ExternalAnnotManager.h  Field.h  FileSpec.h  Flattener.h  Font.h  Function.h  GState.h  GeometryCollection.h  HTML2PDF.h  Highlights.h  Image.h  KeyStrokeActionResult.h  KeyStrokeEventData.h  LinkInfo.h  (+46 more)
Summary/libs/pdftron/PDF/Annots/: Caret.h  CheckBoxWidget.h  Circle.h  ComboBoxWidget.h  FileAttachment.h  FreeText.h  Highlight.h  Ink.h  Line.h  Link.h  ListBoxWidget.h  Markup.h  Movie.h  PolyLine.h  Popup.h  PushButtonWidget.h  RadioButtonGroup.h  RadioButtonWidget.h  Redaction.h  RubberStamp.h  Screen.h  SignatureWidget.h  Sound.h  Square.h  Squiggly.h  StrikeOut.h  Text.h  TextMarkup.h  TextWidget.h  Underline.h  Watermark.h  Widget.h
Summary/libs/pdftron/SDF/: DictIterator.h  DocSnapshot.h  NameTree.h  NumberTree.h  Obj.h  ObjSet.h  ResultSnapshot.h  SDFDoc.h  SecurityHandler.h  SignatureHandler.h  UndoManager.h
Summary/libs/tclap/: test1.cpp
Summary/resources/: Settings.cpp  json_file.json  rule_for_kurs.json  rule_for_lab.json
Summary/scripts/: build.sh  clang-format-all  run.sh  submodules.sh  test.sh
Summary/src/: Checker.cpp  Checker.h  FilesChecker.cpp  FilesChecker.h  HeadChecker.cpp  HeadChecker.h  Parser.cpp  Parser.h  PicturesChecker.cpp  PicturesChecker.h  Result.cpp  Result.h  Rule.h  Settings.cpp  Settings.h  SpellChecker.cpp  SpellChecker.h  StyleChecker.cpp  StyleChecker.h  TableOfContentChecker.cpp  TableOfContentChecker.h  TestChecker.cpp  TestChecker.h  TitleChecker.cpp  TitleChecker.h  example.cpp  main.cpp  test1.cpp
Summary/src/checker/: Checker.cpp  Checker.h
Summary/src/parser/: Parser.cpp  Parser.h
Summary/src/settings/: Settings.cpp  Settings.h
Summary/test/: CMakeLists.txt  doctest.h  json_file.json  test.cpp
server/: pom.xml  result.txt  (+1 more)
(+42 files in other folders)
